# peer_segmentation_deployment

./: Dockerfile  Dockerfile_X86.txt  README.md  build-docker.sh  lab_studio_docker.sh  run-docker.sh
peer_ws/src/pallet_detection_RT/: CMakeLists.txt  package.xml
peer_ws/src/pallet_detection_RT/src/: pallet_onnx.cpp
peer_ws/src/pallet_detection_python/: package.xml  setup.cfg  setup.py
peer_ws/src/pallet_detection_python/pallet_detection_python/: pallet_detection.py
train/: README.dataset.txt  README.roboflow.txt  data.yaml  train_yolo.ipynb
train/runs/custom_yolo_model/: args.yaml  results.csv
